# train_data_sl

./: .gitignore  auto_git_backup.pid  auto_git_backup.sh  merge_shards.py  pyproject.toml  slr_routes_to_csv_xlsx.py  slr_stations_to_csv.py  slr_train_stops_playwright.py  stations.csv
data/shard_0_of_16/: completed_pairs.shard_0_of_16.csv  slr_trains_by_route.shard_0_of_16.partial.csv
data/shard_0_of_4/: completed_pairs.shard_0_of_4.csv  slr_trains_by_route.shard_0_of_4.partial.csv
data/shard_10_of_16/: completed_pairs.shard_10_of_16.csv  slr_trains_by_route.shard_10_of_16.partial.csv
data/shard_11_of_16/: completed_pairs.shard_11_of_16.csv  slr_trains_by_route.shard_11_of_16.partial.csv
data/shard_12_of_16/: completed_pairs.shard_12_of_16.csv  slr_trains_by_route.shard_12_of_16.partial.csv
data/shard_13_of_16/: completed_pairs.shard_13_of_16.csv  slr_trains_by_route.shard_13_of_16.partial.csv
data/shard_14_of_16/: completed_pairs.shard_14_of_16.csv  slr_trains_by_route.shard_14_of_16.partial.csv
data/shard_15_of_16/: completed_pairs.shard_15_of_16.csv  slr_trains_by_route.shard_15_of_16.partial.csv
data/shard_1_of_16/: completed_pairs.shard_1_of_16.csv  slr_trains_by_route.shard_1_of_16.partial.csv
data/shard_1_of_4/: completed_pairs.shard_1_of_4.csv  slr_trains_by_route.shard_1_of_4.partial.csv
data/shard_2_of_16/: completed_pairs.shard_2_of_16.csv  slr_trains_by_route.shard_2_of_16.partial.csv
data/shard_2_of_4/: completed_pairs.shard_2_of_4.csv  slr_trains_by_route.shard_2_of_4.partial.csv
data/shard_3_of_16/: completed_pairs.shard_3_of_16.csv  (+1 more)
(+14 files in other folders)
