[tool.poetry]
name = "slr-schedule-scraper"
version = "0.1.0"
package-mode = false
description = "Scrape Sri Lanka Railways schedules (stations, routes, per-train stop tables) and export CSV/XLSX."
authors = ["Sudil Hasitha <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
requests = "*"
beautifulsoup4 = "*"   # package name is 'beautifulsoup4' (not 'bs4')
pandas = "*"           # DataFrame + CSV/XLSX helpers
openpyxl = "*"         # Excel writer/engine used by pandas
playwright = "*"       # headless browser automation
requests-cache = "^1.2.1"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
